# proxy-structuring-engine

./: .coverage  .coveragerc  .cursorrules  .gitignore  CITATION.cff  INFO.md  README.md  claudes_thoughts.md  demo.ipynb  demo.py  pyproject.toml  requirements.txt
.cache/clangd/index/: _cassert.h.21FD8D2034D419D1.idx  _prefix.h.5CB4561AC3B7E661.idx  acceptor.cpp.56740A0B38A51F9C.idx  acceptor.cpp.EF71ED64E11FBED0.idx  adaptor_base.hpp.4F65973B38A0C641.idx  adaptor_base.hpp.7DA8EAD385627502.idx  adaptor_base.hpp.D1DD8EB01060F88C.idx  adaptor_base.hpp.D626AA64C3323D8D.idx  adaptor_base_decl.hpp.1220B77D79133750.idx  adaptor_base_decl.hpp.7EA637F19AA4BE84.idx  adaptor_base_decl.hpp.AD468A7A4866A57C.idx  adaptor_base_decl.hpp.AF187F1C14538375.idx  add.hpp.AF6DA931B9AF6B8C.idx  adt.hpp.21AD65B8129D79A9.idx  and.hpp.CF5E6E5DF1AF6F90.idx  android.h.447EF7483FAAE0A3.idx  any.h.4B2033AB7E881907.idx  append.hpp.757B5256707F624E.idx  apply.hpp.94C4CBFE971BD19F.idx  arena.cc.DFE005D676CB1801.idx  arena.h.AF18BC0CA9FD98FA.idx  arena_impl.h.384470727E522E4A.idx  arenastring.cc.CDC0433E1440F183.idx  arenastring.h.4619C225AEC146EF.idx  arithmetic.hpp.CD1491EE2894A57F.idx  array.hpp.CB0DCCEB1C2A3D2F.idx  array.hpp.E7C2EFEAAD5452AD.idx  array.hpp.F0A288E742F8C7FB.idx  array_byte.hpp.288CB03B8C82BD9F.idx  array_byte.hpp.E39ADF3DB7F15C43.idx  array_char.hpp.120FCF9CD552AE65.idx  array_char.hpp.67D53F5422BE17CD.idx  array_ref.hpp.7B31D0ED89568D31.idx  array_ref.hpp.BABF44CBBAD191D6.idx  array_ref_decl.hpp.5D16A8C561091904.idx  array_ref_decl.hpp.C9248DBAC1A7C151.idx  array_ref_decl.hpp.D9E875087BD46F05.idx  array_ref_decl.hpp.FBDD7DA76EDF16F7.idx  array_unsigned_char.hpp.E5F742998EEC8302.idx  array_unsigned_char.hpp.EFA2304BD76493CE.idx  (+644 more)
.github/: FUNDING.yml
.github/workflows/: python-app.yml  python-publish.yml
benchmarks/: pse.py
docs/: best-effort-matching.md
examples/: demo.ipynb  quickstart-mlx.py  quickstart-torch.py  quickstart.py  simple_demo.ipynb  simple_demo.py  thinking_answer.ipynb  thinking_answer.py
pse/: __init__.py  engine.py  state_machine.py  structuring_engine.py
pse-core/: Cargo.toml  pse_core.pyi
pse-core/src/: acceptor.rs  engine.rs  lib.rs  state_machine.rs  walker.rs
pse/acceptors/: token_acceptor.py
pse/acceptors/basic/: __init__.py  acceptor.py  boolean_acceptor.py  boolean_acceptors.py  character_acceptor.py  character_acceptors.py  integer_acceptor.py  number_acceptor.py  primitive_acceptors.py  string_acceptor.py  string_character_acceptor.py  text_acceptor.py  whitespace_acceptor.py
pse/acceptors/collections/: array_acceptor.py  encapsulated_acceptor.py  sequence_acceptor.py  wait_for_acceptor.py
pse/acceptors/json/: json_acceptor.py  object_acceptor.py  property_acceptor.py  string_acceptor.py
pse/acceptors/schema/: any_schema_acceptor.py  array_schema_acceptor.py  enum_schema_acceptor.py  number_schema_acceptor.py  object_schema_acceptor.py  property_schema_acceptor.py  string_schema_acceptor.py
pse/base/: encapsulated.py
pse/core/: __init__.py  acceptor.py  driver.py  engine.py  state_machine.py  walker.py
pse/engine/: __init__.py  structuring_engine.py
pse/grammar/: __init__.py  grammar.py  python.py
pse/json/: __init__.py
pse/json/schema_sources/: from_function.py
pse/lark/: python.py
pse/lark/grammar/: __init__.py  grammar.py
pse/schema_acceptors/: any_schema_acceptor.py  array_schema_acceptor.py  enum_schema_acceptor.py  number_schema_acceptor.py  object_schema_acceptor.py  property_schema_acceptor.py  string_schema_acceptor.py
pse/state_machine/: __init__.py  accepted_state.py  cursor.py  diagram.md  empty_transition.py  state_machine.py  types.py  walker.py
pse/state_machines/: __init__.py  get_state_machine.py
pse/state_machines/base/: any_character.py  character.py  phrase.py
pse/state_machines/basic/: boolean_acceptor.py  character_acceptor.py  integer_acceptor.py  number_acceptor.py  string_acceptor.py  string_character_acceptor.py  text_acceptor.py  whitespace_acceptor.py
pse/state_machines/collections/: array_acceptor.py  encapsulated_acceptor.py  sequence_acceptor.py  wait_for_acceptor.py
pse/state_machines/composite/: chain.py  encapsulated.py  wait_for.py
pse/state_machines/json/: json_acceptor.py  object_acceptor.py  property_acceptor.py
pse/state_machines/schema/: any_schema.py  any_schema_acceptor.py  array_schema.py  array_schema_acceptor.py  enum_schema.py  enum_schema_acceptor.py  key_value_schema.py  number_schema.py  number_schema_acceptor.py  object_schema.py  object_schema_acceptor.py  property_schema.py  property_schema_acceptor.py  string_schema.py  string_schema_acceptor.py
pse/state_machines/types/: array.py  boolean.py  enum.py  integer.py  json.py  key_value.py  number.py  object.py  property.py  string.py  whitespace.py
pse/structure/: __init__.py  engine.py  function.py  structuring_engine.py
pse/structures/: __init__.py  function.py
pse/types/base/: character.py  encapsulated.py  loop.py  phrase.py  wait_for.py
pse/types/grammar/: bash.py  lark.py
pse/types/json/: __init__.py  json_object.py  json_string.py
pse/types/misc/: fenced_freeform.py  freeform.py
pse/util/: __init__.py  bias_logits.py  driver.py  generate_mlx.py  generate_schema.py  get_acceptor.py  get_logit_bias.py  get_state_machine.py  get_top_logits.py  pydantic_to_json.py  torch_mixin.py
pse/util/generate/: mlx.py
pse/util/state_machine/: accepted_state.py  delimiter.py  get_acceptor.py  types.py
pse/xml/: xml_encapsulated.py  xml_tag.py
tests/: util.py
tests/benchmarks/: benchmark.py  test_benchmarks.py
tests/functional/: test_e2e.py  test_engine_e2e.py  test_engine_mlx.py
tests/unit/: test_engine.py  test_state_machine.py  test_structuring_engine.py
tests/unit/base/: test_any_character.py  test_chain.py  test_character.py  test_encapsulated.py  test_phrase.py  test_state_machine.py  test_wait_for.py
tests/unit/core/: test_driver.py  test_engine.py  test_state_machine.py  test_walker.py
tests/unit/json/: test_any_json_schema.py  test_json_array.py  test_json_key_value.py  (+4 more)
(+152 files in other folders)
