[package]
name = "pse-core"
version = "0.0.1"
description = "Core components for PSE (Prompt Structure Engine) in Rust"
edition = "2021"

[dependencies]
# Logging
log = "0.4"
env_logger = "0.10"
pyo3 = { version = "0.23.2", features = ["extension-module"] }
tokenizers = "0.21.0"
trie-rs = "0.4.2"
serde_json = "1.0.133"

[lib]
name = "pse_core"
crate-type = ["cdylib"]
path = "src/lib.rs"
